# Kortex

./: README.md  pyproject.toml
src/kortex/: main.py
src/kortex/core/: __init__.py  agent.py  chat_controller.py  database.py  ollama_service.py  tools.py  user_info.py
src/kortex/core/agent/: __init__.py  constants.py  models.py  service.py  state.py  utils.py
src/kortex/core/database/: __init__.py  base.py
src/kortex/core/database/models/: __init__.py  chat.py  message.py
src/kortex/core/tools/: __init__.py  base.py  read_dir.py  read_file.py  registry.py  run_cmd.py  write_file.py
src/kortex/ui/: app.py
src/kortex/ui/qml/: Main.qml
src/kortex/ui/qml/components/: ChatInput.qml  ChatItem.qml  CustomComboBox.qml  CustomPopup.qml  CustomToolTip.qml  MessageBubble.qml  NavItem.qml  SidebarItem.qml  ToolPermissionCard.qml  UserProfileCard.qml
src/kortex/ui/qml/pages/: HomePage.qml  SettingsPage.qml
src/kortex/ui/qml/theme/: Theme.qml
