[project]
name = "kortex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.0.27",
    "ollama>=0.6.1",
    "pydbus>=0.6.0",
    "pyside6>=6.6.3.1",
]

[project.scripts]
kortex = "kortex.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"