[project]
name = "kortex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "ollama>=0.4.0",
    "pydbus>=0.6.0",
    "pyside6>=6.6.3.1",
]

[project.scripts]
kortex = "kortex.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"kortex" = ["ui/qml/**/*.qml"]